[build-system]
requires = [
    "setuptools >= 52.0.0",
]
build-backend = "setuptools.build_meta"


[project]
name = "VCFViz"
description = "A rework of vcfparser created by Kyrylo Bessonov and can be found here: https://github.com/kbessonov1984/VCFParser"
readme = "README.md"
version = "0.0.1"
keywords = ["VCF", "Visulization"]
license = {text = ""}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux"
]

[project.scripts]
VCFViz= "VCFViz.CommandLineArgs:run_main"